--- a/src/main/resources/templates/abc.html
+++ b/src/main/resources/templates/abc.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>商城购物中心</title>
+    <title>Title</title>
 </head>
 <body>
+asdfasdf
 </body>
 </html>
